# XG-Seeking

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _patch.py  index.html  iterate.sh  local-server.mjs  package-lock.json  package.json  test_api.sh  vite.config.mjs  启动 XG221B.vbs
.github/: release-notes.md
.github/workflows/: ci.yml  release.yml
.hermes/: mindmap-plan.md
docs/: CHANGELOG.md  QA-WORKFLOW.md  storage-contract.md
scripts/: check-versions.mjs  start-xg221b.vbs
src/: api.js  coordinator.js  helpers.js  i18n.js  main.js  markdown.js  mindmap-view.js  notes-view.js  state.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  mindmap.rs  notes.rs  settings.rs  storage.rs
tests/: markdown-test.mjs
tests/smoke/: helper.mjs  phase4-smoke.mjs  smoke-test.mjs  stage1-regression.mjs  ui-smoke.mjs
