[package]
name = "xg221b"
version = "0.1.0"
description = "A lightweight local-first notes app."
authors = ["XG221B"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
