[package]
name = "xg221b"
version = "0.2.1"
description = "A lightweight local-first notes app."
authors = ["XG221B"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
