[package]
name = "xg221b"
version = "0.3.0"
description = "A lightweight local-first notes app."
authors = ["XG221B"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
fs2 = "0.4"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
